force-app/main/default/objects/Change_Content_Rule__mdt/Change_Content_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Change Content Rule</label>
    <pluralLabel>Change Content Rules</pluralLabel>
</CustomObject>