force-app/main/default/objects/Change_Content_Rule__mdt/fields/Action_Regex__c.field-meta.xml
<CustomField>
    <fullName>Action_Regex__c</fullName>
    <label>Action Regex</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>