force-app/main/default/objects/Change_Content_Rule__mdt/fields/Change_Operation_Override__c.field-meta.xml
<CustomField>
    <fullName>Change_Operation_Override__c</fullName>
    <label>Change Operation Override</label>
    <length>50</length>
    <type>Text</type>
</CustomField>