force-app/main/default/objects/Change_Content_Rule__mdt/fields/Display_Regex__c.field-meta.xml
<CustomField>
    <fullName>Display_Regex__c</fullName>
    <label>Display Regex</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>