force-app/main/default/objects/Change_Content_Rule__mdt/fields/Metadata_Type_Override__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Type_Override__c</fullName>
    <label>Metadata Type Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>