force-app/main/default/objects/Change_Content_Rule__mdt/fields/Primary_Area_Override__c.field-meta.xml
<CustomField>
    <fullName>Primary_Area_Override__c</fullName>
    <label>Primary Area Override</label>
    <length>80</length>
    <type>Text</type>
</CustomField>