force-app/main/default/objects/Change_Content_Rule__mdt/fields/Section_Regex__c.field-meta.xml
<CustomField>
    <fullName>Section_Regex__c</fullName>
    <label>Section Regex</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>