force-app/main/default/objects/Change_Content_Rule__mdt/fields/Severity_Override__c.field-meta.xml
<CustomField>
    <fullName>Severity_Override__c</fullName>
    <label>Severity Override</label>
    <length>20</length>
    <type>Text</type>
</CustomField>